--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.OnHand" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
-    </style>
+    <!-- TODO: Keeping this around to remove top action bar - revisit doing this in compose -->
+    <style name="Theme.OnHand" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
